# xournalpp-pluginhub

./: .gitattributes  .gitignore  README.md  example.json  example_registration.json  plugins.json  s.bat
.github/: PULL_REQUEST_TEMPLATE.md  Registration.md
.github/workflows/: pull_plugin_data.yml  pull_pluigin_data.yml  pull_request.yml
data/: namespace.json  plugins.json
data-fetching/: README.md  checkpluigin.py  pull-data.py  pull-data2.py  pull_request_check.py
docs2/: mkdocs.yml
docs2/docs/: Registration.md  index.md
docs2/docs/CPP/: Build.md  index.md
docs2/docs/Data/: Pull_Pluigin_data.md
docs2/docs/More/: About.md  Changelog.md  TODO.md  Useless_Ideas.md
example/: README.md  example.json  index.json  registration.json
plugin-data-pull/: pull-data.py  pull_request_check.py
plugin-viewer/: .gitignore  CMakeLists.txt  Dockerfile  README.md  style.css
plugin-viewer/src/: main.cpp
plugin-viewer/src/core/: downloader.cpp  fetch.cpp  parse.cpp  unzip.cpp
plugin-viewer/src/header/: button_row.hpp  config.hpp.in  downloader.hpp  fetch.hpp  main.hpp  parse.hpp  render_plugins.hpp  ui_main.hpp  unzip.hpp
plugin-viewer/src/ui/: button_row.cpp  render_plugins.cpp  ui_main.cpp
plugin_viewer_cpp/: CMakeLists.txt  Dockerfile  README.md
plugin_viewer_cpp/src/: fetch.cpp  fetch.hpp  main.cpp
plugin_viewer_cpp/src/core/: fetch.cpp
plugin_viewer_cpp/src/header/: fetch.hpp  ui_main.hpp
plugin_viewer_cpp/src/ui/: ui_main.cpp
plugin_viewer_rust/: Cargo.toml  README.md
plugin_viewer_rust/src/: main.rs
plugins/pluginhub_plugin/: index.json  main.lua
plugins/pluiginhub_pluigin/: README.md  index.json
plugins/test-plugin/: README.md  index.json  main.lua  plugin.ini
plugins/test-pluigin/: index.json
pluigin-data-pull/: LICENSE  README.md  main.py  pull-data.py  pull_request_check.py
pluigin-registration/: pluiginhub_pluigin.json  xournalpp-test-pluigin.json
pluigins/pluiginhub_pluigin/: README.md  index.json  main.lua
pluigins/test-pluigin/: README.md  index.json  main.lua  plugin.ini
registration/: README.md  pluginhub_plugin.json  test-plugin.json  test1.json
webpage/: .dockerignore  .gitignore  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json  pre_build.js  pre_run.js  pull_data.js
webpage/public/docs/: info.txt
webpage/src/components/: in_plugins.ts  plugins.js
webpage/src/layouts/: Layout.astro
webpage/src/pages/: search.astro
webpage/src/pages/plugin/: [slug].astro
xournalpp_pluiginhub_pluigin/: plugin.ini
xournappluigin_viewer_rust/: Cargo.toml  README.md
xournappluigin_viewer_rust/src/: main.rs
